--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
+    "query": "^0.2.0",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
@@ -24,7 +26,8 @@
     "react-native-screens": "^3.10.1",
     "react-native-transition": "^1.1.8",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-webview": "^11.15.0"
+    "react-native-webview": "^11.15.0",
+    "string": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
