--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
+    "moment": "^2.29.1",
     "query": "^0.2.0",
     "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-calendar-picker": "^7.1.2",
+    "react-native-date-picker": "^4.1.3",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-image-picker": "^4.6.0",
+    "react-native-multiple-select": "^0.5.7",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-transition": "^1.1.8",
