--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-transition": "^1.1.8",
     "react-native-vector-icons": "^9.0.0",
     "react-native-webview": "^11.15.0",
+    "react-select": "^5.2.1",
     "string": "^3.3.3"
   },
   "devDependencies": {
