--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-calendar-picker": "^7.1.2",
     "react-native-date-picker": "^4.1.3",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-image-picker": "^4.6.0",
     "react-native-image-zoom-viewer": "^3.0.1",
