--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-transition": "^1.1.8",
-    "react-native-vector-icons": "^9.0.0",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-video": "^5.2.0",
+    "react-native-video-player": "^0.12.0",
     "react-native-webview": "^11.15.0",
     "react-select": "^5.2.1",
     "string": "^3.3.3"
